--- a/operacional/templates/operacional/emails.html
+++ b/operacional/templates/operacional/emails.html
@@ -24,7 +24,8 @@
         if($('#parceiros:checked').val() && conexoes.trim().length != 0) {mailto += ",";}
       }
       if($('#parceiros:checked').val() && conexoes.trim().length != 0) {mailto += conexoes;}
-      mailto += "?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %}";
+      mailto += "?cc={{coordenacao.user.email}}";
+      //mailto += "?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %}";
       //mailto += ",pfe@insper.edu.br";
       mailto += "&subject=PFE%20"
       if(avancado) {mailto += "Avançado%20";}
@@ -82,9 +83,10 @@
           <div class="input-group-append  ml-1">
             <a href="
               mailto:{% for membro in membros_comite %}{{membro.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %}
-              ?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
-              &amp;subject=PFE%20Comitê&amp;body=Caros%20membros%20do%20comitê%20do%20PFE,%0D%0A%0D%0A
-              atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
+              ?cc={{coordenacao.user.email}}
+              {% comment %} ?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br {% endcomment %}
+              &amp;subject=PFE%20Comitê&amp;body=Caros%20membros%20do%20comitê%20do%20Capstone,%0D%0A%0D%0A
+              atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20Capstone)
             " target="_blank">
             {% comment %}
             <a href="
@@ -203,11 +205,12 @@
     {% if todos_alunos %}
       <a href="
         mailto:{% for aluno in todos_alunos %}{{ aluno.user.email|parse_quote }},{% endfor %}
-        ?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
-        &amp;bcc=comitepfe@insper.edu.br
-        &amp;subject=PFE%20&amp;body=Caros%20alunos,%0D%0A%0D%0A
+        ?cc={{coordenacao.user.email}}
+        {% comment %} ?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br {% endcomment %}
+        {% comment %} &amp;bcc=comitepfe@insper.edu.br {% endcomment %}
+        &amp;subject=PFE%20&amp;body=Caros%20estudantes,%0D%0A%0D%0A
         atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
-      ">Todos os estudantes do PFE</a><br>
+      ">Todos estudantes</a><br>
       {% comment %}
       <a href="
         mailto:{% for aluno in todos_alunos %}{{aluno.user.get_full_name|parse_quote}}%20&lt;{{ aluno.user.email|parse_quote }}&gt;,{% endfor %}
@@ -222,15 +225,16 @@
     {% if todos_professores %}
       <a href="
         mailto:{% for professor in todos_professores %}{{ professor.user.email|parse_quote }},{% endfor %}
-        ?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
-        &amp;bcc=comitepfe@insper.edu.br
+        ?cc={{coordenacao.user.email}}
+        {% comment %} ?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br {% endcomment %}
+        {% comment %} &amp;bcc=comitepfe@insper.edu.br {% endcomment %}
         &amp;subject=PFE&amp;body=Caros%20professores%20do%PFE,%0D%0A%0D%0A
         atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
-      " target="_blank">Todos os professores do PFE</a><br>
+      " target="_blank">Todos professores</a><br>
       {% comment %}     
       <a href="
         mailto:{% for professor in todos_professores %}{{professor.user.get_full_name|parse_quote}}%20&lt;{{ professor.user.email|parse_quote }}&gt;,{% endfor %}
-        ?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
+        ?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
         &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
         &amp;subject=PFE&amp;body=Caros%20professores%20do%PFE,%0D%0A%0D%0A
         atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
@@ -241,15 +245,16 @@
     {% if todos_parceiros %}
       <a href="
         mailto:{% for parceiro in todos_parceiros %}{{ parceiro.user.email|parse_quote }},{% endfor %}
-        ?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
-        &amp;bcc=comitepfe@insper.edu.br
-        &amp;subject=PFE&amp;body=Caros%20parceiro%20do%PFE,%0D%0A%0D%0A
+        ?cc={{coordenacao.user.email}}
+        {% comment %} ?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br {% endcomment %}
+        {% comment %} &amp;bcc=comitepfe@insper.edu.br {% endcomment %}
+        &amp;subject=PFE&amp;body=Caros%20parceiro%20do%Capstone,%0D%0A%0D%0A
         atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
-      " target="_blank">Todos os parceiros do PFE</a><br>
+      " target="_blank">Todos parceiros</a><br>
       {% comment %}
       <a href="
         mailto:{% for parceiro in todos_parceiros %}{{parceiro.user.get_full_name|parse_quote}}%20&lt;{{ parceiro.user.email|parse_quote }}&gt;,{% endfor %}
-        ?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
+        ?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br
         &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
         &amp;subject=PFE&amp;body=Caros%20parceiro%20do%PFE,%0D%0A%0D%0A
         atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
@@ -302,7 +307,8 @@
               str += emails.join(',');
 
               //str += "?cc=Luciano%20Pereira%20Soares<{{coordenacao.user.email}}>,PFE<pfe@insper.edu.br>&bcc=Comite%20PFE<comitepfe@insper.edu.br>&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20Luciano%20P%20Soares%20(coordenação%20PFE)";
-              str += "?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br&bcc=comitepfe@insper.edu.br&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
+              str += "?cc={{coordenacao.user.email}}&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
+              //str += "?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br&bcc=comitepfe@insper.edu.br&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
               $("#Estudantes").attr("href",str);
               $("#Estudantes").show();
             }
@@ -320,7 +326,8 @@
               str += emails.join(",");
 
               //str += "?cc=Luciano%20Pereira%20Soares<{{coordenacao.user.email}}>,PFE<pfe@insper.edu.br>&bcc=Comite%20PFE<comitepfe@insper.edu.br>&subject=PFE&body=Caros%20orientadores,%0D%0A%0D%0Aatenciosamente,%20Luciano%20P%20Soares%20(coordenação%20PFE)";
-              str += "?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br&bcc=comitepfe@insper.edu.br&subject=PFE&body=Caros%20orientadores,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
+              str += "?cc={{coordenacao.user.email}}&subject=PFE&body=Caros%20orientadores,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
+              //str += "?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br&bcc=comitepfe@insper.edu.br&subject=PFE&body=Caros%20orientadores,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
               $("#Orientadores").attr("href",str);
               $("#Orientadores").show();
             }
@@ -338,8 +345,9 @@
               str += emails.join(',');
 
               //str += "?cc=Luciano%20Pereira%20Soares<{{coordenacao.user.email}}>,PFE<pfe@insper.edu.br>&bcc=Comite%20PFE<comitepfe@insper.edu.br>&subject=PFE&body=Caros%20parceiros,%0D%0A%0D%0Aatenciosamente,%20Luciano%20P%20Soares%20(coordenação%20PFE)";
-              str += "?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %}"
-              str += ",pfe@insper.edu.br&bcc=comitepfe@insper.edu.br"
+              str += "?cc={{coordenacao.user.email}}"
+              //str += "?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %}"
+              //str += ",pfe@insper.edu.br&bcc=comitepfe@insper.edu.br"
               str += "&subject=PFE&body=Parceiros%20do%20PFE%20Insper,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
               $("#Parceiros").attr("href",str);
               $("#Parceiros").show();
@@ -358,7 +366,8 @@
               str += emails.join(',');
 
               //str += "?cc=Luciano%20Pereira%20Soares<{{coordenacao.user.email}}>,PFE<pfe@insper.edu.br>&bcc=Comite%20PFE<comitepfe@insper.edu.br>&subject=PFE&body=Caros%20membros%20de%bancas,%0D%0A%0D%0Aatenciosamente,%20Luciano%20P%20Soares%20(coordenação%20PFE)";
-              str += "?cc={% for coordenador in coordenacoes %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br&bcc=comitepfe@insper.edu.br&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
+              str += "?cc={{coordenacao.user.email}}&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
+              //str += "?cc={% for coordenador in administradores %}{{coordenador.email|parse_quote}}{% if not forloop.last %},{% endif %}{% endfor %},pfe@insper.edu.br&bcc=comitepfe@insper.edu.br&subject=PFE&body=Caros%20estudantes,%0D%0A%0D%0Aatenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)";
               $("#Bancas").attr("href",str);
               $("#Bancas").show();
             }
