--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -138,8 +138,10 @@
     <div style="display: block; padding-left: 32px" class="row" data-type="professor">
 
       Dedicação: 
-      <label for="ti"><input type="radio" name="dedicacao" id="ti" value="ti" {% if usuario.professor.dedicacao == "TI" %}checked{% endif %}> TI</label>&nbsp;&nbsp;&nbsp;
-      <label for="tp"><input type="radio" name="dedicacao" id="tp" value="tp" {% if usuario.professor.dedicacao == "TP" %}checked{% endif %}>  TP</label>
+      <label for="ti" style="margin-left: 8px;"><input type="radio" name="dedicacao" id="TI" value="TI" {% if usuario.professor.dedicacao == "TI" %}checked{% endif %}> Tempo Integral</label>
+      <label for="tp" style="margin-left: 8px;"><input type="radio" name="dedicacao" id="TP" value="TP" {% if usuario.professor.dedicacao == "TP" %}checked{% endif %}>  Tempo Parcial</label>
+      <label for="tp" style="margin-left: 8px;"><input type="radio" name="dedicacao" id="V" value="V" {% if usuario.professor.dedicacao == "V" %}checked{% endif %}>  Visitante</label>
+      <label for="tp" style="margin-left: 8px;"><input type="radio" name="dedicacao" id="E" value="E" {% if usuario.professor.dedicacao == "E" %}checked{% endif %}>  Externo</label>
       <br>
 
       <label for="areas">Áreas de interesse: </label> <input type="text" size="75" maxlength="{% max_length Professor "areas" %}" style="max-width: 95%;" id="areas" name="areas" {% if usuario.professor.areas %} value="{{usuario.professor.areas}}" {% endif %} ><br>
@@ -216,6 +218,8 @@
       // Professor
       $("#ti").prop("required",false);
       $("#tp").prop("required",false);
+      $("#v").prop("required",false);
+      $("#e").prop("required",false);
       
       // Parceiro
       $("#organizacao").prop("required",false);
@@ -223,6 +227,8 @@
       if(filterValue=="professor") {
         $("#ti").prop("required",true);
         $("#tp").prop("required",true);
+        $("#v").prop("required",true);
+        $("#e").prop("required",true);
         $("#ativo_div").show();
         $("#org_text").html("no Insper");
       }
