--- a/organizacoes/templates/organizacoes/seleciona_conexoes.html
+++ b/organizacoes/templates/organizacoes/seleciona_conexoes.html
@@ -95,7 +95,6 @@
               {{parceiro.cargo}} 
             </td>
             
-            
             <td>
               <a href="mailto:{{parceiro.user.email}}"
               {% if not parceiro.user.is_active %} style="color: LightBlue;" {% endif %}>
@@ -122,9 +121,11 @@
       <p>Não existem parceiros cadastradas para essa organização.</p>
     {% endif %}
 
+    
     <label for="colaboracao">Colaboração Externa (CE)</label></b>:
+    <div style="display: inline-block; max-width: 100%; width: 480px;">
     <select class="selectpicker" name="colaboracao" id="colaboracao" title="Selecione quem está colaborando com o projeto"
-    data-live-search="true" data-width="560px">
+    data-live-search="true" data-width="100%" data-size="10">
         <option selected value> -- selecione um colaborador(a) -- </option>
         <optgroup label="Organização">
         {% for colaborador in todos_parceiros %}  
@@ -134,6 +135,7 @@
         {% endfor %}
         </optgroup>
     </select>
+    </div>
     <br><br><br>
 
     <small><button class="btn btn-light btn-sm" onclick="location.href='{% url "cadastrar_usuario" %}?tipo=parceiro&organizacao={{projeto.organizacao.id}}'" type="button" style="float: right;">
