mostrando projetos publicos só no servidor

--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -55,7 +55,7 @@
       <tbody>
       {% for relatorio in relatorios %}
 
-        {% if relatorio.link and relatorio.projeto %}
+        {% if relatorio.link or relatorio.documento and relatorio.projeto %}
 
           <tr class="item">
             <td>
